# CSCLI

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
cmd_case_open/: __init__.py  ascii_to_listOfStrings.py  shell_hooks.py
cmd_case_open.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cmd_case_open/core/: __init__.py  constants.py  rendering.py
cmd_case_open/data/: __init__.py  spectrum-case.json
cmd_case_open/scripts/: hooks.powershell.ps1  hooks.zsh
cmd_case_open/src/: CSCLI.py  __init__.py  __main__.py  handlers.py  parser.py
cmd_shell_lab/: README.md  ROADMAP.md  pyproject.toml
cmd_shell_lab/cmd_case_open/: inventory.py
cmd_shell_lab/cmd_case_open.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cmd_shell_lab/cmd_case_open/cli/: __init__.py  handlers.py  main.py  parser.py
cmd_shell_lab/cmd_case_open/core/: constants.py  rendering.py  utils.py
cmd_shell_lab/cmd_case_open/domain/: __init__.py  case_catalog.py
cmd_shell_lab/cmd_shell_lab/: cli.py  examples.py
cmd_shell_lab/cmd_shell_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cmd_shell_lab/cmd_shell_lab/data/: __init__.py
cmd_shell_lab/examples/: hook_templates.sh
