[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd-case-open"
version = "0.1.0"
description = "CLI for terminal case opening experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shravan" }]
dependencies = ["terminaltexteffects>=0.11"]

[project.scripts]
cmd-case-open = "cmd_case_open.src.CSCLI:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cmd_case_open*"]

[tool.setuptools.package-data]
"cmd_case_open.data" = ["*.json"]
"cmd_case_open.scripts" = ["*.zsh", "*.ps1"]
